--- a/index.html
+++ b/index.html
@@ -59,6 +59,28 @@
         </div>
 
     </section>
+
+    <section class="follower"> 
+        <div class="follower-item">
+            <div class="follower1">
+                <h1>700k</h1>
+                <p>acebook Followers</p>
+            </div>
+            <div class="follower1">
+                <h1>700k</h1>
+                <p>acebook Followers</p>
+            </div>
+            <div class="follower1">
+                <h1>700k</h1>
+                <p>acebook Followers</p>
+            </div>
+        </div>
+    </section>
+
+    <footer class="footer-area">
+        <h1>FOOD NETWORK</h1>
+        <p>@nasima akter</p>
+        </footer>
 </body>
 
 </html>
