--- a/index.html
+++ b/index.html
@@ -11,15 +11,25 @@
 
 <body>
     <section class="header-area">
-        <div class="width-half control-width">
-            <h1><span class="word-color">Skip </span>The Diet, Just Eat Healthy With Food Network</h1>
-            <p>Healthy Food. The delicious easy way for Weight Loss. The Diet proven to work fast and healthy.
-            These Shocking Ingredients will burn body fat in few weeks. Simple method for flat belly.</p>
-            <a class="btn-style" target="-blank" href="https://github.com/Nasima-akter/Food-Network">Order Food</a>
+        <div class="menu">
+            <ul>
+                <li><a class="active" href="#">home</a></li>
+                <li><a href="#">contact</a></li>
+                <li><a href="#">about  recipies</a></li>
+                <li><a href="#">food item</a></li>
+            </ul>
         </div>
-
-        <div class="width-half">
-            <img src="images/female/Group 8425.png" alt="female diet pic">
+        <div class="container">
+            <div class="width-half control-width">
+                <h1><span class="word-color">Skip </span>The Diet, Just Eat Healthy With Food Network</h1>
+                <p>Healthy Food. The delicious easy way for Weight Loss. The Diet proven to work fast and healthy.
+                These Shocking Ingredients will burn body fat in few weeks. Simple method for flat belly.</p>
+                <a class="btn-style" target="-blank" href="https://github.com/Nasima-akter/Food-Network">Order Food</a>
+            </div>
+    
+            <div class="width-half">
+                <img src="images/female/Group 8425.png" alt="female diet pic">
+            </div>
         </div>
     </section>
 
@@ -47,13 +57,13 @@
                 <p>Pizza, dish of Italian origin consisting of a flattened disk of bread dough topped with some combination of olive oil, oregano, tomato, olives.</p>
             </div>
             <div class="title1">
-                <img src="images/food/Project Cover1.jpg" alt="title1">
-                <h3>pizza</h3>
+                <img src="images/food/Project Cover.png" alt="title1">
+                <h3>Sandwich</h3>
                 <p>Pizza, dish of Italian origin consisting of a flattened disk of bread dough topped with some combination of olive oil, oregano, tomato, olives.</p>
             </div>
             <div class="title1">
-                <img src="images/food/Project Cover1.jpg" alt="title1">
-                <h3>pizza</h3>
+                <img src="images/food/Project Cover.jpg" alt="title1">
+                <h3>Bargar</h3>
                 <p>Pizza, dish of Italian origin consisting of a flattened disk of bread dough topped with some combination of olive oil, oregano, tomato, olives.</p>
             </div>
         </div>
@@ -78,8 +88,10 @@
     </section>
 
     <footer class="footer-area">
-        <h1>FOOD NETWORK</h1>
-        <p>@nasima akter</p>
+        <div class="footer-item">
+            <h2><span class="word-color">FOOD</span> NETWORK</h2>
+            <p>@nasima akter.Eat healthy to live healthy. Live healthy to live happy.</p>
+        </div>
         </footer>
 </body>
 
