--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <div class="menu">
             <ul>
                 <li><a class="active" href="#">home</a></li>
-                <li><a href="#">contact</a></li>
-                <li><a href="#">about  recipies</a></li>
-                <li><a href="#">food item</a></li>
+                <li><a href="#about">about me</a></li>
+                <li><a href="#my-recipies">my recipies</a></li>
+                <li><a href="#footer">contact</a></li>
             </ul>
         </div>
         <div class="container">
@@ -34,7 +34,7 @@
     </section>
 
     
-    <section class="contact-area"> 
+    <section class="contact-area" id="about"> 
         <div class="width-half">
             <img id="images" src="images/female/Person Image.png" alt="contact">
         </div> 
@@ -45,7 +45,7 @@
         </div>
     </section>
 
-    <section class="recipies-area">
+    <section class="recipies-area" id="my-recipies">
         <div class="recipie-meaning">
             <h2>My Recipies</h2>
            <p>The largest online collection of professionally-tested recipes, reliable kitchen tips, and mouthwatering daily food content. Come, search, cook.</p>
@@ -87,7 +87,7 @@
         </div>
     </section>
 
-    <footer class="footer-area">
+    <footer class="footer-area" id="footer">
         <div class="footer-item">
             <h2><span class="word-color">FOOD</span> NETWORK</h2>
             <p>@nasima akter.Eat healthy to live healthy. Live healthy to live happy.</p>
