correction image name

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </div>
     
             <div class="width-half">
-                <img src="images/female/Group 8425.png" alt="female diet pic">
+                <img src="images/female/Group-8425.png" alt="Group">
             </div>
         </div>
     </section>
@@ -36,7 +36,7 @@
     
     <section class="contact-area" id="about"> 
         <div class="width-half">
-            <img id="images" src="images/female/Person Image.png" alt="contact">
+            <img id="images" src="images/female/Person-Image.png" alt="person">
         </div> 
         <div class="width-half control-width">
             <h2>About Me</h2>
@@ -52,17 +52,17 @@
         </div>
         <div class="title-area">
             <div class="title1">
-                <img src="images/food/Project Cover1.jpg" alt="title1">
+                <img src="images/food/Project-Cover1.jpg" alt="pro">
                 <h3>pizza</h3>
                 <p>Pizza, dish of Italian origin consisting of a flattened disk of bread dough topped with some combination of olive oil, oregano, tomato, olives.</p>
             </div>
             <div class="title1">
-                <img src="images/food/Project Cover.png" alt="title1">
+                <img src="images/food/Project-Cover.png" alt="Project">
                 <h3>Sandwich</h3>
                 <p>Pizza, dish of Italian origin consisting of a flattened disk of bread dough topped with some combination of olive oil, oregano, tomato, olives.</p>
             </div>
             <div class="title1">
-                <img src="images/food/Project Cover.jpg" alt="title1">
+                <img src="images/food/Project-Cover.jpg" alt="cover">
                 <h3>Bargar</h3>
                 <p>Pizza, dish of Italian origin consisting of a flattened disk of bread dough topped with some combination of olive oil, oregano, tomato, olives.</p>
             </div>
